Reset provider's texture if QQuickNinePatchImage's source is invalid

When QQuickNinePatchImage is used as a source of other shader related
object like ShaderEffect, OpacityMask or etc.,
there isn't a implementation to invalidate the provider's texture
when QQuickNinePatchImage is invalid.
It causes segmentation fault due to dangling pointer.

Fixes: QTBUG-100508
Change-Id: I7d57259629f8cdc0c7ba3523d2e9dd84eae96cf0
Reviewed-by: <sukyoung.oh@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 81bbd0b45aeb1eb98efd9153c79ebf4f0e4be839)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>